# freezr

./: .gitignore  ALIASES.md  CHANGELOG.md  CHANGELOG_DBUS.md  CODE_OF_CONDUCT.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE-MIT  MIGRATION_SUMMARY.md  ML_PROCESS_ANALYTICS.md  PROCESS_MONITOR_SUMMARY.md  README.md  ROADMAP.md  SECURITY.md  SNAP_IMPLEMENTATION_SUMMARY.md  TEST_PROCESS_MONITOR.sh  freezr.service  test-service-install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/examples/: config.toml
crates/freezr-cli/: Cargo.toml
crates/freezr-cli/src/: main.rs
crates/freezr-core/: Cargo.toml
crates/freezr-core/src/: error.rs  executor.rs  lib.rs  memory_pressure.rs  ml_types.rs  scanner.rs  systemd.rs  types.rs
crates/freezr-core/src/cgroups/: controller.rs  error.rs  mod.rs  types.rs  utils.rs
crates/freezr-core/tests/: scanner_integration.rs  systemd_integration.rs
crates/freezr-daemon/: Cargo.toml
crates/freezr-daemon/src/: config.rs  lib.rs  main.rs  monitor.rs  stats.rs
crates/freezr-gui/: Cargo.toml
crates/freezr-gui/src/: main.rs
docs/: PROCESS_MONITOR_GUIDE.md  README.md
docs/api/: README.md
docs/deployment/: README.md  systemd.md
docs/development/: ARCHITECTURE.md  CGROUP_API_DESIGN.md  CGROUP_RESEARCH.md  CHANGELOG.md  CONTRIBUTING.md  GITHUB_DESCRIPTION.md  README.md
docs/examples/: PROCESS_MONITOR_EXAMPLES.md  README.md  common-scenarios.md
docs/technical/: DBUS_SYSTEMD_INTEGRATION.md  LOG_MAINTENANCE.md  MEMORY_PRESSURE.md  README.md  SECURITY_QUICKREF.md  SNAP_MONITORING.md  SYSTEMD_SERVICE.md
docs/user-guide/: ALIASES.md  DASHBOARD.md  README.md  USAGE.md  getting-started.md
scripts/: log_maintenance.sh  setup_log_cron.sh
