[workspace]
members = [
    "crates/freezr-core",
    "crates/freezr-daemon",
    "crates/freezr-cli",
    "crates/freezr-gui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/YOUR_USERNAME/freezr"
homepage = "https://github.com/YOUR_USERNAME/freezr"
documentation = "https://docs.rs/freezr"
keywords = ["system", "monitor", "process", "freeze", "resource"]
categories = ["command-line-utilities", "os::linux-apis"]
rust-version = "1.70"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# System information
procfs = { version = "0.16", default-features = false }
sysinfo = "0.30"
nix = { version = "0.27", features = ["process", "signal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# CLI
clap = { version = "4.4", features = ["derive", "cargo", "env"] }
clap_complete = "4.4"
colored = "2.1"
indicatif = "0.17"
console = "0.15"

# Configuration
config = "0.14"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"
byte-unit = "5.1"

# Optional: ML features
#candle-core = { version = "0.3", optional = true }
#candle-nn = { version = "0.3", optional = true }

# Optional: GUI features
#iced = { version = "0.12", optional = true }
#egui = { version = "0.24", optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
